使用队列批量执行任务

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "puppeteer-test",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main.js",
   "author": "Marx",
   "license": "MIT",
   "dependencies": {
-    "puppeteer-core": "^1.7.0"
+    "promise-mq": "0.0.1",
+    "puppeteer-core": "^1.11.0"
   }
 }
